---------------------------------------------------------------------------------------------------
Version: 1.0.13
Date: 2025-04-
  Changes:
    - Long stack inserter tech: *100 ingredients, /100 duration
    - Changed name of "Indexer" to "Compute farm"
  Sound:
    - Increased sound of data extractor
---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 2025-04-11
  Graphics:
    - Reworked AI core graphics again (closer to their first version, but less random colors)
    - Reworked webbed processors graphics
---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 2025-04-10
  Changes:
    - Added 5 achievements
    - Do away with "space platforms for ground" dependency
    - Display ai training recipes with the rest of moshine's processes
  Locale:
    - Changed maraxsis glass' name to "reinforced glass"
  Graphics:
    - Reworked AI core icons (follows the colors of quality and look like a progression)
    - Increased light of AI trainer
    - Data processor tech adapted to latest changes
    - Tweaked webbed processor graphics (color, decoratives, double-thick)
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2025-03-28
  Changes:
    - Data processor can be frozen
    - Data processor +33% energy usage
  Graphics:
    - Heavily edited data processor + light to be more unique and computer-like
  Bugfixes:
    - Fixed switched curved/diagonal rails names
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2025-03-25
  Changes:
    - Data processor data output is in every corner
    - Data processor can't transfer inputed data (consequence fo fiber length fix)
  Bugfixes:
    - Fixed fiber length not being infinite
    - Fixed that datacells were recycling into datacells with data