@@ -9,7 +9,7 @@
   "dependencies": [
     "base",
     "space-age",
-    "Moshine-assets >= 0.3.10",
+    "Moshine-assets >= 0.3.11",
     "snouz-big-accumulator >= 1.0.3",
     "snouz-big-solar-panel >= 1.0.4",
     "se-space-trains >= 1.0.5",
